# ALGOL58-X86

./: CMakeLists.txt  LICENSE  README.txt  compile_flags.txt  run
include/: debug.h  err.h  hashtable.h  location.h  str.h  utils.h
include/lexer/: lexer.h  token.h
include/parser/: node.h  parser.h
src/: debug.c  hashtable.c  location.c  main.c  str.c  utils.c
src/lexer/: lexer.c  token.c
src/parser/: node.c  parser.c
